--- a/index.html
+++ b/index.html
@@ -1,1 +1,81 @@
-# deavienna
+<!DOCTYPE html>
+<html>
+<head>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>      
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body, html {
+  height: 100%;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.hero-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://c.tenor.com/lSTWccC10mAAAAAd/lol-hei.gif");
+  height: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+
+.hero-text button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 10px 25px;
+  color: black;
+  background-color: #ddd;
+  text-align: center;
+  cursor: pointer;
+}
+
+.hero-text button:hover {
+  background-color: #555;
+  color: white;
+}
+</style>
+</head>
+<body>
+
+<div class="hero-image">
+  <div class="hero-text">
+    <h1 style="font-size:50px">Deavienna AR</h1>
+    <p>And I'm a singer</p>
+    <button>Thanks</button>
+  </div>
+</div>
+
+<p>Page Content..</p>
+<script>
+    Swal.fire(
+    {
+        title: 'klik buka gambar',
+        text: "untuk menampilkan gambar",
+        type: 'warning',
+        showCancelButton: true,
+        confirmButtonColor: '#3085d6',
+        cancelButtonColor: '#d33',
+        confirmButtonText: 'Buka gambar!'
+    }).then((result) =>
+    {
+        if (result.value) {
+        Swal.fire(
+            'terimakasih!',
+            'kamu telah membuka gambar',
+            'success'
+        )
+        }
+    })
+</script>
+</body>
+</html>
