--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="https://github.com/biruabuhitam/deavienna/blob/main/sweetalert2.all.min.js"></script>      
+<script src="sweetalert2.all.min.js"></script>      
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body, html {
