--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body, html {
 }
 
 .hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://c.tenor.com/lSTWccC10mAAAAAd/lol-hei.gif");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://c.tenor.com/yuKaKz-uOckAAAAM/bayi-gemes-lucu.gif");
   height: 50%;
   background-position: center;
   background-repeat: no-repeat;
@@ -49,13 +49,13 @@ body, html {
 
 <div class="hero-image">
   <div class="hero-text">
-    <h1 style="font-size:50px">Deavienna AR</h1>
-    <p>And I'm a singer</p>
+    <h1 style="font-size:50px">Rafael</h1>
+    <p>And I'm a Mommy Boy</p>
     <button>Thanks</button>
   </div>
 </div>
 
-<p>sign 2021</p>
+<p>Sign|2021</p>
 <script>
     Swal.fire(
     {
