--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@ body, html {
 <script>
     Swal.fire(
     {
-        title: 'klik buka gambar',
-        text: "untuk menampilkan gambar",
+        title: 'klik open',
+        text: "untuk menampilkan content",
         type: 'warning',
         showCancelButton: true,
         confirmButtonColor: '#3085d6',
         cancelButtonColor: '#d33',
-        confirmButtonText: 'Buka gambar!'
+        confirmButtonText: 'Open!'
     }).then((result) =>
     {
         if (result.value) {
