--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body, html {
   <div class="hero-text">
     <h1 style="font-size:50px">Rafael</h1>
     <p>And I'm a Mommy Boy</p>
-  <a href=""https://c.tenor.com/FjJCn24e2cIAAAAM/deavienna-selfie.gif"></a><button>Thanks</button>
+  <a href="https://c.tenor.com/FjJCn24e2cIAAAAM/deavienna-selfie.gif"></a><button>Thanks</button>
   </div>
 </div>
 
